--- a/login.css
+++ b/login.css
@@ -45,9 +45,11 @@ span.psw {
 .cancelbtn {
     width: auto;
     padding: 10px 18px;
+    background-color: #f44336;
+}
+.cancelbtn > a {
     color: white;
     text-decoration: none;
-    background-color: #f44336;
 }
 form{
     width: 500px;
