--- a/uplinktech.css
+++ b/uplinktech.css
@@ -1,13 +1,4 @@
-.dropdown {
-  position: relative;
-  display: inline-block;  
-} 
-.dropbtn img{
-  width: 20px;
-}  
-.header-right{
-  float: right;
-}
+/*header*/
 ul {
   list-style-type: none;
   margin-right: 20px;
@@ -35,6 +26,45 @@ li a:hover {
 li img{
  width: 20px;
 }
+.header-right{
+  float: right;
+}
+.dropdown {
+  position: relative;
+  display: inline-block;  
+}
+/* user drop down*/ 
+.dropbtn img{
+  width: 20px;
+}
+.dropbtn {
+
+  color: white;
+  padding: 16px;
+  font-size: 16px;
+  border: none;
+}  
+.dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: #f1f1f1;
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  z-index: 1;
+}
+
+.dropdown-content a {
+  color: black;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+}
+
+.dropdown-content a:hover {background-color: #ddd;}
+
+.dropdown:hover .dropdown-content {display: block;}
+
+.dropdown:hover .dropbtn {background-color: rgb(72, 216, 72);}
 .search{
   margin-top: 30px;
   margin-right: 50px;
@@ -81,38 +111,9 @@ ol{
 .nav-list li a:hover{
   background-color: rgb(141, 230, 141);
 }
-.dropbtn {
-
-  color: white;
-  padding: 16px;
-  font-size: 16px;
-  border: none;
-}
 .h {
 color: black;
 }
-/* user drop down*/
-.dropdown-content {
-  display: none;
-  position: absolute;
-  background-color: #f1f1f1;
-  min-width: 160px;
-  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-  z-index: 1;
-}
-
-.dropdown-content a {
-  color: black;
-  padding: 12px 16px;
-  text-decoration: none;
-  display: block;
-}
-
-.dropdown-content a:hover {background-color: #ddd;}
-
-.dropdown:hover .dropdown-content {display: block;}
-
-.dropdown:hover .dropbtn {background-color: rgb(72, 216, 72);}
 .box{
   background-size: 100%;
   border: 1px solid black;
@@ -143,14 +144,14 @@ color: black;
   font-weight: 600;
   border: none;
 }
-.feat{
-text-align: center;
-}
 #myCarousel{
 height: 400px;
 width: 1200px;
 margin-left: -30px;
 }
+.feat{
+  text-align: center;
+  }
 /*footer*/
 footer {
 margin-top: 30px;
